force-app/main/default/objects/CTRNewsHeader__c.object
<CustomObject>
    <fields>
        <fullName>CTRRequestFormItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTR Request Form Item</label>
        <referenceTo>CTRRequestFormItem__c</referenceTo>
        <relationshipLabel>CTRNewsHeader</relationshipLabel>
        <relationshipName>CTRNewsHeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsFound__c</fullName>
        <label>Is Found</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>CTRNewsHeader</relationshipLabel>
        <relationshipName>CTRNewsHeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CTRNewsHeader</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>CTR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>